Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42772

qtdeclarative\tests\auto\particles\qquickcustomparticle\tst_qquickcustomparticle crashes on exit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0 RC
    • 5.4.0
    • Quick: Particles
    • None
    • Windows
    • 087aa1f3cb5975ef55e42db54487f737c93a4f0f (qtbase/5.4.0, 21.11.2014. 5.4RC)

      http://testresults.qt-project.org/ci/QtDeclarative_5.4.0_Integration/build_00014/win64-msvc2012_developer-build_qtnamespace_Windows_81/log.txt.gz

      The issue seems to be that events events are still processed in the particle thread during the shutdown process.

      Stack trace of thread 15:

      Stopped in thread 15 by: Exception at 0x66ee1ff2, code: 0xc0000005: read access violation at: 0x0, flags=0x0 (first chance).
      
      0	QCoreApplication::postEvent	qcoreapplication.cpp	1279	0x66b31f42	
      1	qt_fast_timer_proc	qeventdispatcher_win.cpp	335	0x66bcdb9b	
      2	DriverCallback	WINMM		0x6fdc3af0	
      3	TimerCompletion	WINMM		0x6fdca535	
      4	timeThread	WINMM		0x6fdca434	
      5	BaseThreadInitThunk	kernel32		0x76a5338a	
      6	__RtlUserThreadStart	ntdll32		0x77809f72	
      7	_RtlUserThreadStart	ntdll32		0x77809f45	
      

        1. qtbug42772_54_purify.txt
          65 kB
          Friedemann Kleint
        2. qtbug42772_540_angle.txt
          61 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-42772
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes